--- a/page1.html
+++ b/page1.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg mb-0">
     <div class="container-fluid">
         <a class="navbar-brand" href="page1.html">TP3-PSW</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,45 +49,45 @@
         </div>
     </div>
 </nav>
-<div class="container-fluid maqueta">
+<div class="container-fluid align-content-center justify-content-center text-center">
     <div class="row">
-        <div class="col-12 bg-danger">
+        <div class="col-12 bg-danger p-2 border-start border-top border-end border-1 border-dark">
             <p>Menu</p>
         </div>
-        <div class="col-md-6 col-sm-12 bg-info">
+        <div class="col-md-6 col-sm-12 bg-info p-2 border-start border-top border-end border-1 border-dark">
             <p>img1</p>
         </div>
-        <div class="col-md-6 d-none d-md-block bg-info">
+        <div class="col-md-6 d-none d-md-block bg-info p-2 border-top border-end border-1 border-dark">
             <p>img2</p>
         </div>
-        <div class="col-12 bg-info">
+        <div class="col-12 bg-info p-2 border-start border-top border-end border-1 border-dark">
             <p>img3</p>
         </div>
-        <div class="col-md-3 col-sm-4 col-6 bg-success">
+        <div class="col-md-3 col-sm-4 col-6 bg-success p-2 border-start border-top border-end border-1 border-dark">
             <p>Art 1</p>
         </div>
-        <div class="col-md-3 col-sm-4 col-6 bg-success">
+        <div class="col-md-3 col-sm-4 col-6 bg-success p-2 border-top border-end border-1 border-dark">
             <p>Art 2</p>
         </div>
-        <div class="col-md-3 col-sm-4 col-6 bg-success">
+        <div class="col-md-3 col-sm-4 col-6 bg-success p-2 border-top border-end border-1 border-dark">
             <p>Art 3</p>
         </div>
-        <div class="col-md-3 col-sm-4 col-6 bg-success">
+        <div class="col-md-3 col-sm-4 col-6 bg-success p-2 border-top border-end border-1 border-dark">
             <p>Art 4</p>
         </div>
-        <div class="col-md-3 col-sm-4 col-6 bg-success">
+        <div class="col-md-3 col-sm-4 col-6 bg-success p-2 border-top border-end border-1 border-dark">
             <p>Art 5</p>
         </div>
-        <div class="col-md-3 col-sm-4 col-6 bg-success">
+        <div class="col-md-3 col-sm-4 col-6 bg-success p-2 border-top border-end border-1 border-dark">
             <p>Art 6</p>
         </div>
-        <div class="col-md-3 col-sm-4 col-6 bg-success">
+        <div class="col-md-3 col-sm-4 col-6 bg-success p-2 border-top border-end border-1 border-dark">
             <p>Art 7</p>
         </div>
-        <div class="col-md-3 col-sm-4 col-6 bg-success">
+        <div class="col-md-3 col-sm-4 col-6 bg-success p-2 border-top border-end border-1 border-dark">
             <p>Art 8</p>
         </div>
-        <footer class="col-12 bg-warning">
+        <footer class="col-12 bg-warning p-2 border-start border-top border-end border-bottom border-1 border-dark">
             <p>footer</p>
         </footer>
     </div>
