--- a/pagea.html
+++ b/pagea.html
@@ -59,7 +59,7 @@
                         <div class="card-body pb-0 m-5">
                             <h5 class="card-title">what can I say?</h5>
                             <p class="card-text">Una canción de la banda sonora de la exitosa serie Anatomia de Grey</p>
-                            <a href="https://www.youtube.com/watch?v=BAikRDZajuM" class="btn btn-primary d-block mt-5" target="_blank">Escuchala</a>
+                            <a href="#ventana1" class="btn btn-primary d-block mt-5" data-bs-toggle="modal">Escuchala</a>
                         </div>
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                         <div class="card-body pb-0 m-5">
                             <h5 class="card-title">where does the good go?</h5>
                             <p class="card-text">Un exito de Tegan y Sara del Album 'So Jealous'</p>
-                            <a href="https://music.youtube.com/watch?v=VFLzZY3w3vg" class="btn btn-primary d-block mt-5" target="_blank">Escuchala</a>
+                            <a href="#ventana2" class="btn btn-primary d-block mt-5" data-bs-toggle="modal">Escuchala</a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                         <div class="card-body pb-0 m-5">
                             <h5 class="card-title">Universe And U</h5>
                             <p class="card-text">Un exito musical del 2004 de la artista KT Tunstall </p>
-                            <a href="https://www.youtube.com/watch?v=dMD2Riybg0E" class="btn btn-primary d-block mt-5" target="_blank">Escuchala</a>
+                            <a href="#ventana3" class="btn btn-primary d-block mt-5" data-bs-toggle="modal">Escuchala</a>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                         <div class="card-body pb-0 m-5">
                             <h5 class="card-title">The Story</h5>
                             <p class="card-text">La actriz Sara Ramirez presenta su One Hit Wonder 'The Story'</p>
-                            <a href="https://music.youtube.com/watch?v=DYA_oBwIBZM" class="btn btn-primary d-block mt-5" target="_blank">Escuchala</a>
+                            <a href="#ventana4" class="btn btn-primary d-block mt-5" data-bs-toggle="modal">Escuchala</a>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                         <div class="card-body pb-0 m-5">
                             <h5 class="card-title">The Winner Takes It All</h5>
                             <p class="card-text">El exito de ABBA 'The Winner Takes It All' te sigue en tu mejor momento</p>
-                            <a href="https://music.youtube.com/watch?v=WbnG3eAGb6Y" class="btn btn-primary d-block mt-5" target="_blank">Escuchala</a>
+                            <a href="#ventana5" class="btn btn-primary d-block mt-5" data-bs-toggle="modal">Escuchala</a>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                         <div class="card-body pb-0 m-5">
                             <h5 class="card-title">Friends</h5>
                             <p class="card-text">Anne Marie presenta un exito en conjunto al famoso DJ Marshmello</p>
-                            <a href="https://music.youtube.com/watch?v=lPaFesZWRug" class="btn btn-primary d-block mt-5" target="_blank">Escuchala</a>
+                            <a href="#ventana6" class="btn btn-primary d-block mt-5" data-bs-toggle="modal">Escuchala</a>
                         </div>
                     </div>
                 </div>
@@ -118,6 +118,120 @@
         <div class="col-md-3 d-none d-md-block">
             <div class="card-publicidad">
                 <img src="images/p1.jpg" alt="A" class="w-100">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="ventana1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">what can I say?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body align-items-center justify-content-center d-flex flex-column">
+                <p class="mb-3">Una canción de la banda sonora de la exitosa serie Anatomia de Grey</p>
+                <div class="d-flex justify-content-center align-items-center">
+                    <iframe width="315" height="315" src="https://www.youtube.com/embed/BAikRDZajuM?si=xIwMLf_4ZXgkAg5c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="ventana2">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">where does the good go</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body align-items-center justify-content-center d-flex flex-column">
+                <p class="mb-3">Un exito de Tegan y Sara del Album 'So Jealous'</p>
+                <div class="d-flex justify-content-center align-items-center">
+                    <iframe width="315" height="315" src="https://www.youtube.com/embed/Etk09imuZ9g?si=GOrt41MXtu9VaBR7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="ventana3">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Universe and U</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body align-items-center justify-content-center d-flex flex-column">
+                <p class="mb-3">Un exito musical del 2004 de la artista KT Tunstall</p>
+                <div class="d-flex justify-content-center align-items-center">
+                    <iframe width="315" height="315" src="https://www.youtube.com/embed/dMD2Riybg0E?si=CrYzZX57FTKlwJG_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="ventana4">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">The Story</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body align-items-center justify-content-center d-flex flex-column">
+                <p class="mb-3">La actriz Sara Ramirez presenta su One Hit Wonder 'The Story'</p>
+                <div class="d-flex justify-content-center align-items-center">
+                    <iframe width="315" height="315" src="https://www.youtube.com/embed/DYA_oBwIBZM?si=_igEkmvnvLN5fhOh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="ventana5">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">The Winner Takes It All</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body align-items-center justify-content-center d-flex flex-column">
+                <p class="mb-3">El exito de ABBA 'The Winner Takes It All' te sigue en tu mejor momento</p>
+                <div class="d-flex justify-content-center align-items-center">
+                    <iframe width="315" height="315" src="https://www.youtube.com/embed/0d3wxfS4Dtw?si=7ZpkdBkpXfj2wayU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="ventana6">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Friends</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body align-items-center justify-content-center d-flex flex-column">
+                <p class="mb-3">Anne Marie presenta un exito en conjunto al famoso DJ Marshmello</p>
+                <div class="d-flex justify-content-center align-items-center">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/CY8E6N5Nzec?si=Mp8x5uwce1gvcXne" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
             </div>
         </div>
     </div>
