--- a/pageb.html
+++ b/pageb.html
@@ -52,8 +52,8 @@
 <div class="container-fluid">
     <div class="row">
         <div class="d-none d-md-block col-md-8">
-        <p class="titulo-tabla">Conversor de Divisas Tabla</p>
-            <table class="table table-striped">
+        <p class="titulo-tabla text-center">Conversor de Divisas Tabla</p>
+            <table class="table table-striped text-center">
                 <thead>
                 <tr>
                     <th scope="col"> </th>
@@ -106,7 +106,7 @@
             </table>
         </div>
         <div class="col-md-4">
-        <p class="titulo-formulario">Conversor de Divisas Formulario</p>
+        <p class="titulo-formulario text-center">Conversor de Divisas Formulario</p>
             <div class="formulario">
                 <h4 class="subtitulo-formulario">Cantidad</h4>
                 <div class="input-group flex-nowrap">
