--- a/pagec.html
+++ b/pagec.html
@@ -113,7 +113,7 @@
         </div>
     </div>
     <br>
-    <div class="row">
+    <div class="row text-center">
         <div class="col-12">
             <div class="card mb-3">
                 <div class="row g-0">
